--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "['PyeongChang', 'South Korea', 2581000, 3194]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
-    "#type(pyeongchang_keys) # list"
+    "type(pyeongchang_keys) # list"
    ]
   },
   {
