--- a/index.ipynb
+++ b/index.ipynb
@@ -464,22 +464,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['PyeongChang', 'South Korea', 2581000, 3194]"
+       "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_keys =list(cities[11].values())\n",
+    "pyeongchang_keys =list(cities[11].keys())\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
